- Base layouts: Splash, Preview, Registration, Authorization

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="test">Test string in androidApp</string>
+    <string name="test" translatable="false">Test string in androidApp</string>
 </resources>
